# ZionDB

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: pipeline_config.yaml
docs/: architecture.md  chunking.md  collections.md  design_decisions.md  embeddings.md  index.md  persistence.md  roadmap.md  storage.md
experiments/: try_pipeline.py
src/ziondb/: __init__.py
src/ziondb/collection/: __init__.py  collection.py  collection_config.py  collection_manager.py  exceptions.py
src/ziondb/components/: __init__.py
src/ziondb/components/boundary_detectors/: __init__.py  kamradt.py
src/ziondb/components/chunk_builders/: __init__.py  semantic.py
src/ziondb/components/embedders/: onnx_embedder.py
src/ziondb/components/sentence_splitters/: __init__.py  regex.py  spacy.py
src/ziondb/core/: __init__.py  interfaces.py  models.py  pipeline.py  ziondb.py
src/ziondb/index/: __init__.py  brute_force_index.py  models.py  similarity.py  vector_index.py
src/ziondb/model_manager/: __init__.py  manager.py
src/ziondb/persistence/: __init__.py  collection_persistence.py  exceptions.py
src/ziondb/persistence/serializers/: __init__.py  (+4 more)
src/ziondb/retrieval/: __init__.py  filter.py  retriever.py  search_context.py  search_request.py  search_result.py
src/ziondb/storage/: __init__.py  exceptions.py  in_memory_storage.py  record.py  storage.py
src/ziondb/utils/: __init__.py  config.py  logging.py
tests/: conftest.py  test_collections.py  test_index.py  test_persistence.py  test_pipeline.py  test_retrieval_refactoring.py  test_storage.py
(+10 files in other folders)
