[project]
name = "ziondb"
version = "0.1.0"
description = "A lightweight, modular, custom vector database and retrieval engine from scratch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "onnxruntime>=1.15.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.16.0",
    "pyyaml>=6.0.3",
    "spacy>=3.5.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ziondb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
